tests/error/defined_class.gw
// [contains] is already defined in namespace
 class C{}
class C{}
